api-gateway/manifests/api_gateway_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-gateway
spec:
    replicas: 3
    selector:
        matchLabels:
            app: api-gateway
    template:
        metadata:
            labels:
                app: api-gateway
        spec:
            containers:
                - name: api-gateway
                  image: atxpaul/api-gateway:latest
                  ports:
                      - containerPort: 3000
