api-gateway/manifests/api_gateway_service.yml
apiVersion: v1
kind: Service
metadata:
    name: api-gateway
spec:
    selector:
        app: api-gateway
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 3000
    type: ClusterIP
