api-gateway/manifests/api_gateway_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: api-gateway-ingress
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: '0'
        nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
        nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
        #nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "1024m"
spec:
    rules:
        - host: test.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: api-gateway
                            port:
                                number: 8080
